upgrading for later version of stack LTS and hsyslog 5+

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,11 @@
-resolver: lts-9.1
+resolver: lts-12.1
 
 packages:
 - .
 
-extra-deps:
-- hsyslog-4
-- hsyslog-udp-0.1.2
+# extra-deps:
+# - hsyslog-4
+# - hsyslog-udp-0.1.2
 
 flags: {}
 
